---------------------------------------------------------------------------------------------------
Version: 2.0.5
  Bugfixes:
    - Fixed FindRecipeTech crash when used with mods that changed gear or brick recipe
---------------------------------------------------------------------------------------------------
Version: 2.0.4
  Bugfixes:
    - Added missing Growth Acclerator recipe name
    - Fixed crash from other mods disabling rocks and decoratives
    - Fixed crash from other mods adding planets (oops)
---------------------------------------------------------------------------------------------------
Version: 2.0.3
  Bugfixes:
    - Fixed progression in Tiberium Only mode being blocked by not being Crude Oil and Uranium Ore not being minable
    - Fixed Tiberium Only map generation preset not working with new planets
    - Fixed Tiberium Centrifuging breaking progression by giving almost pure scrap instead of ores
    - Fixed Blue Tiberium Ore icon mipmaps spilling into adjacent images
    - Fixed Tiberium technology order so they don't all appear in a block on the "List of technologies"
    - Fixed collison mask crash from tibChangeTerrain command or blocking spawning a Blossom Tree under another entity
    - Fixed missing recipe names for Tiberium Monoculture structures
    - Fixed projectile animation for Sonic Emitters
    - Fixed structures images being cut off in entity tooltips
    - Fixed missing image for Tiberium Detonation Charge
  Changes:
    - Reorganized settings menu, check your mod settings to sure they still have the values that you want
    - Changed Tiberium Slurry Centrifuging to unlock when you craft Tiberium Slurry instead of Water (oops)
    - Corrected Tiberium refining recipes to reflect the new water-to-steam ratio in Factorio 2.0
    - Made Tiberium Centrifuges immune to damage from Tiberium growing so you can now safely place them on Tiberium Ore