@@ -2,6 +2,8 @@
 Version: 2.0.5
   Bugfixes:
     - Fixed FindRecipeTech crash when used with mods that changed gear or brick recipe
+    - Fixed icon for Tiberium Ore and Tiberium Ore Centrifuging
+    - Fixed crash and hid irrelevant planet settings when Space Age is disabled. If you are still crashing, use the restore mod default settings option and then redo your settings after you stop crashing
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.4
   Bugfixes:
